# simple_gpu_analyzer

./: Cargo.toml  README.md  bundler.toml
src/: gpui.rs  gui.rs  lib.rs
