[package]
name = "simple_gpu_analyzer"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your@email.com>"]
license = "GPL-3.0-or-later"
homepage = "https://youtu.be/dQw4w9WgXcQ"
description = "A short description of your plugin"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git"}

egui = "0.31"   # 31にしているのは、nih_plug_eguiの内部eguiが31のため
egui-wgpu = "0.31"  # 31にしているのは、nih_plug_eguiの内部eguiが31のため
rustfft = "6"
once_cell = "1.19"
parking_lot = "0.12"
anyhow = "1.0"
bytemuck = { version = "1.13", features = ["derive"] }

# To make the state persistable
serde = { version = "1.0", features = ["derive"] }
type-map = "0.5.1"

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
